# rampart

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  ROADMAP-v1.md  SECURITY.md  TASK.md  docker-compose.example.yml  go.mod  go.sum  index.html  install.ps1  install.sh  mkdocs.yml  rampart-export-2026-03-14.json  rampart-review-v092.md  review-findings.md  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: ci.yml  community-policy-ci.yml  docker.yml  docs.yml  release.yml  render-diagrams.yml
.gocache/: trim.txt
.gocache/00/: 0000f6164e009532e1b6d1c8faa43ff6c65f7c1dbf2c0353f2f026a046796152-a  004b61f604b7fe03b9c146b3e367eca2096c0fcd24ad737859a4d620fd99eab4-a  004cffed673c2acc1d2c91d8d6c3b4d0d9a875ee420d7303c166073f1aab83d0-d  00833bb9081eef8be99a06d691ea17dac2cda1e72a66ad3e547ec7b899d3aa4d-a  008639e15fac575155ad463d125d717f28eebb09646d09733b9782a5fd237263-a  00b57b25512ef17d959f3533f479e31ea4e4f63f6389d942987edfa8ca81edb2-a  00c8798a100c245f1f168145bda58d4941b52940dd01e9f49e454e53233afc43-d  00e80dbdf823155ac809e642cc0ca736036899c5c9a090dccc673ca0d7af9ad4-d
.gocache/01/: 0103f24e519b7f28a9b6d230d9bf1e608e252061dfb857bc80fc50cce02055c2-a  012549eac0a98c3d4613c69603e155ad7697d84efb0dd1ea9bed64b063b8ccdc-a  01290f76ce1308afdca06279ba15b2d2d087840f0c817789f45fa8e9cf69cd38-a  (+9 more)
assets/: extra.css
bench/: corpus.yaml  embed.go
contrib/: openclaw-shim.sh
contributing/: index.html
docs/: API-REFERENCE.md  ARCHITECTURE.md  BACKLOG.md  MCP-SANDBOX-PROPOSAL.md  PRELOAD-SPEC.md  ROADMAP.md  THREAT-MODEL.md  _headers  architecture.d2  community-policies.md  index.html  install  install.ps1  install.sh  robots.txt  sitemap.xml
docs-site/: community-policies.md  contributing.md  index.html  index.md  robots.txt  sitemap.xml
examples/: policy-with-tests.yaml  rampart-tests.yaml
hooks/: README.md  node-fs-hook.js
integrations/: index.html
policies/: block-prompt-injection.yaml  ci.yaml  demo.yaml  embed.go  mcp-server.yaml  openclaw.yaml  openclaw_test.go  paranoid.yaml  policies_test.go  research-agent.yaml  standard.yaml  standard_test.go  yolo.yaml
preload/: Makefile  README.md  librampart.c  test_preload.sh
registry/: embed.go  registry.json
scripts/: generate-registry.go  patch-openclaw-tools.sh  test-approval-flow.sh  test-hook-env.sh
sdks/python/: .gitignore  LICENSE  README.md  pyproject.toml
sdks/python/rampart/: __init__.py  client.py  decorators.py  types.py
sdks/python/tests/: __init__.py  test_client.py
search/: search_index.json
tests/: e2e.yaml
(+2874 files in other folders)
